--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/home.css">
+    <link rel="stylesheet" href="./frontend/css/home.css">
     <title>Home</title>
 
     <style>
@@ -25,7 +25,7 @@
     <nav class="frame4">
         <div class="frame3">
             <div class="frame65">
-                <img src="../image/logo.svg" alt="Logo" width="90" height="62.1">
+                <img src="./frontend/image/logo.svg" alt="Logo" width="90" height="62.1">
                 <p class="" href="#" style="color:white ;">Z-TECH</p>
             </div>
 
@@ -35,7 +35,7 @@
                 </div>
 
                 <div class="frame10">
-                    <a href="./sobreNos.html">sobre nós</a>
+                    <a href="./frontend/views/sobreNos.html">sobre nós</a>
                 </div>
 
                 <div class="frame9">
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex align-items-center">
-                    <img src="../image/Terra.svg" alt="Planeta Terra">
+                    <img src="./frontend/image/Terra.svg" alt="Planeta Terra">
 
                     <div>
                         <h1 class="textLadingPage">Nos ajude a monitorar o Sol!</h1>
@@ -73,7 +73,7 @@
             </div>
 
             <div class="col">
-                <img class="imageAstronauta" src="../image/Astronauta.svg" alt="Astronauta">
+                <img class="imageAstronauta" src="./frontend/image/Astronauta.svg" alt="Astronauta">
             </div>
 
         </div>
@@ -120,7 +120,7 @@
             <div class="informaçõesSimples">
                 <div class="informaçõesSimplesSolo">
 
-                    <img src="../image/Sol.svg" alt="Sol">
+                    <img src="./frontend/image/Sol.svg" alt="Sol">
                     <div>
                         <h2>01</h2>
                         <p>Durante as erupções solares, uma grande quantia de partículas energizadas são lançadas pelo
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="informaçõesSimplesSolo">
-                    <img src="../image/Meteoro.svg" alt="Meteoro">
+                    <img src="./frontend/image/Meteoro.svg" alt="Meteoro">
                     <div>
                         <h2>02</h2>
                         <p>Ao se aproximarem do nosso planeta Terra, essas partículas são desviadas pelo campo
@@ -139,7 +139,7 @@
 
                 <div class="informaçõesSimplesSolo">
 
-                    <img src="../image/TerraMenor.svg" alt="Terra">
+                    <img src="./frontend/image/TerraMenor.svg" alt="Terra">
                     <div>
                         <h2>03</h2>
                         <p>Com esse desvio, essas partículas acabam atingindo a atmosfera nas regiões polares, formando
@@ -153,7 +153,7 @@
         <div class="Slide3">
             <h1 class="">Beleza perigosa</h1>
 
-            <img src="../image/Telescopio.svg" alt="Telescopio" class="mb-5">
+            <img src="./frontend/image/Telescopio.svg" alt="Telescopio" class="mb-5">
             <p>
                 <strong>Mas essas partículas, que formam as auroras boreais, podem ser responsáveis por alterar todo o
                     campo magnético terrestre. </strong>
@@ -203,7 +203,7 @@
             </div>
 
             <div class="col">
-                <img src="../image/Planet.svg" alt="Randon planet" class="planetRandom">
+                <img src="./frontend/image/Planet.svg" alt="Randon planet" class="planetRandom">
             </div>
 
         </div>
@@ -213,7 +213,7 @@
         <nav>
             <div class="frame3">
                 <div class="frame65">
-                    <img src="../image/logo.svg" alt="Logo" width="90" height="62.1">
+                    <img src="./frontend/image/logo.svg" alt="Logo" width="90" height="62.1">
                     <p class="" href="#" style="color:white ;">Z-TECH</p>
                 </div>
 
